--- a/templates/front.html
+++ b/templates/front.html
@@ -1,40 +1,6 @@
-<!DOCTYPE html>
- <html>
-    <head>
-        <title>blogs</title>
-    </head>
+{% extends "base.html" %}
 
-    <style type="text/css">
-    .error {
-        color: red
-    }
-    label {
-        display: block;
-        font-size: 20px;
-    }
-
-    input[type=text] {
-        width: 400px;
-        font-size: 20px;
-        padding: 2px;
-    }
-
-    textarea {
-        width: 400px;
-        height: 200px;
-        font-size: 17px;
-        font-family: monospace;
-    }
-
-    input[type=submit] {
-        font-size: 24px;
-    }
-
-    hr {
-        margin: 20px auto;
-    }
-    </style>
-<h1>blog!</h1>
+{% block content %}
 <form method="post">
 <label>
     <div>title</div>
@@ -49,13 +15,7 @@
 
 <input type="submit">
 </form>
-<hr>
-{% for blog in blogs %}
-<div class="blog">
-<div class="blog-title">{{blog.title}}</div>
-<pre class="blog-body">{{blog.blogpost}}</pre>
-</div>
-{% endfor %}
 
-<body>
-</html>
+
+
+{% endblock %}
